err/python-pygaze.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygaze'...
Listing './lib/python3.5/site-packages/pygaze/_display'...
Listing './lib/python3.5/site-packages/pygaze/_eyetracker'...
Compiling './lib/python3.5/site-packages/pygaze/_eyetracker/eyelinkgraphics.py'...
***   File "./lib/python3.5/site-packages/pygaze/_eyetracker/eyelinkgraphics.py", line 468
    print "eyelink_graphics.alert_printf(): %s" % msg
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygaze/_eyetracker/libtobii.py'...
***   File "./lib/python3.5/site-packages/pygaze/_eyetracker/libtobii.py", line 1333
    print "Connecting to:", eyetracker_info
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pygaze/_joystick'...
Listing './lib/python3.5/site-packages/pygaze/_keyboard'...
Listing './lib/python3.5/site-packages/pygaze/_logfile'...
Listing './lib/python3.5/site-packages/pygaze/_misc'...
Listing './lib/python3.5/site-packages/pygaze/_mouse'...
Listing './lib/python3.5/site-packages/pygaze/_screen'...
Listing './lib/python3.5/site-packages/pygaze/_sound'...
Listing './lib/python3.5/site-packages/pygaze/_time'...
Listing './lib/python3.5/site-packages/pygaze/plugins'...
Listing './lib/python3.5/site-packages/python_pygaze-0.6.0a21.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/opensesame_plugins'...
Listing './share/opensesame_plugins/pygaze_drift_correct'...
Listing './share/opensesame_plugins/pygaze_init'...
Listing './share/opensesame_plugins/pygaze_init/resources'...
Listing './share/opensesame_plugins/pygaze_init/resources/locale'...
Listing './share/opensesame_plugins/pygaze_log'...
Listing './share/opensesame_plugins/pygaze_start_recording'...
Listing './share/opensesame_plugins/pygaze_stop_recording'...
Listing './share/opensesame_plugins/pygaze_wait'...
Listing './share/python-wheels'...
